# cpp-anvil

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
cmake/: CppAnvilConfig.cmake.in  cppAnvilConfig.cmake
examples/: CMakeLists.txt  loadfile.cpp  teststuff.cpp
include/cpp-anvil/: anvil.hpp  nbt.hpp  version.hpp
include/cpp-anvil/anvil/: chunk.hpp  coordinates.hpp  region.hpp  section.hpp
include/cpp-anvil/io/: compression.hpp  io.hpp  nbt_byte_stream.hpp
include/cpp-anvil/nbt/: basic_tag.hpp  collection_tag.hpp  compound_tag.hpp  io.hpp  list_tag.hpp  math.hpp  primitive_tag.hpp  types.hpp
include/cpp-anvil/nbt/detail/: floating_point.hpp  type_utilities.hpp
include/cpp-anvil/util/: compression.hpp
src/: CMakeLists.txt  version.cpp.in
src/anvil/: chunk.cpp  coordinates.cpp  region.cpp  region_header.cpp  region_header.hpp  section.cpp
src/io/: compression.cpp  io.cpp  nbt_byte_stream.hpp
src/nbt/: basic_tag.cpp  compound_tag.cpp  io.cpp  list_tag.cpp  types.cpp
src/util/: byte_swap.hpp  compression.cpp  nbt_byte_stream.hpp
test/: CMakeLists.txt  test_data.hpp  test_main.cpp
test/nbt/: test_bytearraytag.cpp  test_bytetag.cpp  test_endtag.cpp  test_io.cpp  test_listtag.cpp  test_types.cpp
test/util/: test_compression.cpp
